--- a/Internet_Archive/lambda/custom/package.json
+++ b/Internet_Archive/lambda/custom/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "alexa-skill-kit-sdk-factskill",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "alexa-sdk": "^1.0.10"
+    "name": "internet-archive-audio-player",
+    "version": "1.0.0",
+    "description": "Internet Archive audio player.",
+    "main": "index.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+      "alexa",
+      "skill",
+      "internet archive"
+    ],
+    "author": "Bimlendra Kumar",
+    "dependencies": {
+      "alexa-sdk": "^1.0.4"
+    }
   }
-}
