--- a/Internet_Archive/lambda/custom/package.json
+++ b/Internet_Archive/lambda/custom/package.json
@@ -1,18 +1,20 @@
 {
-    "name": "internet-archive-audio-player",
-    "version": "1.0.0",
-    "description": "Internet Archive audio player.",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-      "alexa",
-      "skill",
-      "internet archive"
-    ],
-    "author": "Bimlendra Kumar",
-    "dependencies": {
-      "alexa-sdk": "^1.0.4"
-    }
+  "name": "internet-archive-audio-player",
+  "version": "1.0.0",
+  "description": "Internet Archive audio player.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "alexa",
+    "skill",
+    "internet archive"
+  ],
+  "author": "Bimlendra Kumar",
+  "dependencies": {
+    "alexa-sdk": "^1.0.4",
+    "bespoken-tools": "^1.2.8",
+    "dashbot": "^9.5.0"
   }
+}
