--- a/Internet_Archive/lambda/custom/package.json
+++ b/Internet_Archive/lambda/custom/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "alexa-sdk": "^1.0.4",
     "bespoken-tools": "^1.2.8",
-    "dashbot": "^9.5.0"
+    "dashbot": "^9.5.0",
+    "lodash": "^4.17.5"
   }
 }
